<resources>
    <string name="app_name">MyMovie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_movie_name">Enter Movie Name...</string>
    <string name="name_of_the_movie">Name of The Movie</string>
    <string name="top_rated">Top Rated</string>
    <string name="latest">Latest</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="release_date">Release Date</string>
    <string name="popularity">Popularity</string>
    <string name="language">Language</string>
    <string name="share">Share your movie with your friends!</string>
</resources>