<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:background="@color/black"
        tools:context=".fragments.MainFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_gravity="center"
            android:layout_width="75dp"
            android:visibility="gone"
            android:layout_height="75dp"
            android:id="@+id/progressBar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/errorTryAgainLayout"
            android:layout_gravity="center">


            <TextView
                android:id="@+id/errorTryAgainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Error! Try Again!"
                android:textSize="26sp"
                android:layout_gravity="center"
                android:textColor="#CACACA"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/tryAgainImage"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/retry" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/contentScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/searchLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edittextbg"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp">

                    <EditText
                        android:id="@+id/editTextMovieName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/enter_movie_name"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:lines="1"
                        android:textColor="@color/white"
                        android:textColorHint="#86F3F2F2" />

                    <ImageView
                        android:id="@+id/search_button"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_baseline_search_24" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/mainContent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/leftArrow"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/ic_baseline_arrow_back"/>

                        <ImageView
                            android:id="@+id/rightArrow"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="5dp"
                            android:src="@drawable/ic_baseline_arrow_forward"/>


                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_marginTop="15dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:id="@+id/popularRecyclerView"/>

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.2dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginHorizontal="35dp"
                        android:background="#3EFFFFFF"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/topRatedLayout">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginStart="15dp"
                            android:text="@string/top_rated"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:fontFamily="@font/alata" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:id="@+id/topRatedRecyclerView"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:id="@+id/nowPlayingLayout">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginStart="15dp"
                            android:text="@string/now_playing"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:fontFamily="@font/alata" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:id="@+id/nowPlayingRecyclerView"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:id="@+id/upcomingLayout">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginStart="15dp"
                            android:text="@string/upcoming"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:fontFamily="@font/alata" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:id="@+id/upcomingRecyclerView"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>


                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

</layout>
